Update Page Styles to Match Figma Design

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/delete-feature-flag-modal/delete-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/delete-feature-flag-modal/delete-feature-flag-modal.component.html
@@ -15,7 +15,7 @@
         {{ 'global.delete-confirmation.message.text' | translate }}
       </div>
       <mat-form-field
-        class="dense-2 full-width"
+        class="dense-2"
         appearance="outline"
       >
         <input
