--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-table/feature-flag-exclusions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-table/feature-flag-exclusions-table.component.html
@@ -1,4 +1,4 @@
-<div class="exclusions-table-container">
+<div class="table-container">
   <app-common-details-participant-list-table
     [dataSource]="dataSource$ | async"
     [isLoading]="isLoading$ | async"
