--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exposures-section-card/feature-flag-exposures-data/feature-flag-exposures-data.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exposures-section-card/feature-flag-exposures-data/feature-flag-exposures-data.component.html
@@ -1,5 +1,5 @@
-<div class="exposures-data">
-  <span class="ft-16-500">
+<div class="exposures-data-container">
+  <span class="ft-14-400">
     Add Exposures data here!
   </span>
 </div>
