--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
@@ -24,9 +24,8 @@
   ></app-common-section-card-action-buttons>
 
   <!-- content -->
-  <ng-container content *ngIf="isSectionCardExpanded">
+  <ng-container content>
     <app-common-section-card-overview-details
-      class="full-width"
       [data]="flagOverviewDetails$ | async"
     ></app-common-section-card-overview-details>
   </ng-container>
