--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
@@ -28,11 +28,13 @@
     </ng-container>
 
     <ng-template #table>
-      <app-feature-flag-root-section-card-table
-        class="full-width"
+      <div class="table-container">
+        <app-feature-flag-root-section-card-table
         [dataSource$]="dataSource$ | async"
         [isLoading$]="isLoadingFeatureFlags$"
-      ></app-feature-flag-root-section-card-table>
+        >
+        </app-feature-flag-root-section-card-table>
+      </div>
     </ng-template>
   </ng-container>
 </app-common-section-card>
