--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -175,7 +175,7 @@
             [removable]="isChipRemovable"
             (removed)="removeChip(experimentTag, 'tags')"
           >
-            <span class="ft-12-600 chip-label">
+            <span class="chip-label">
               {{ experimentTag }}
             </span>
             <mat-icon matChipRemove *ngIf="isChipRemovable">cancel</mat-icon>
