--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.scss
@@ -1,4 +1,4 @@
-::ng-deep .header {
+.header {
   height: 64px;
   display: flex;
   flex-direction: column;
@@ -7,10 +7,14 @@
   .breadcrumb {
     display: flex;
     column-gap: 8px;
-    color: var(--light-black);
 
     .root-link {
       text-decoration: none;
+      color: var(--light-black);
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
