--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.scss
@@ -19,6 +19,11 @@
     }
   }
 
+  .content-container {
+    max-height: 480px;
+    overflow: scroll;
+  }
+
   .footer-container {
     height: 80px;
     display: flex;
