--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page-header/common-root-page-header.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page-header/common-root-page-header.component.html
@@ -1,4 +1,4 @@
-<ng-container class="header">
+<div class="header">
   <h1 class="title ft-26-700">{{ title | translate }}</h1>
   <h3 class="subtitle ft-16-400">{{ subtitle | translate }}</h3>
-</ng-container>
+</div>
