--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-status-indicator-chip/common-status-indicator-chip.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-status-indicator-chip/common-status-indicator-chip.component.html
@@ -1,3 +1,7 @@
-<mat-chip class="status-indicator" [ngClass]="chipClass">
-  {{ chipText }}
-</mat-chip>
+<div class="chip-container dense-2">
+  <mat-chip class="status-indicator" [ngClass]="chipClass">
+    <span class="chip-label">
+      {{ chipText }}
+    </span>
+  </mat-chip>
+</div>
