--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -1,112 +1,96 @@
-<div class="flags-list-container">
-  <div scroll (scrolled)="fetchFlagsOnScroll()" class="flags-list-table-container" #tableContainer>
-    <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoading$ | async"></mat-progress-bar>
-    <table
-      class="flags-list"
-      mat-table
-      [dataSource]="dataSource$"
-      matSort
-      (matSortChange)="changeSorting($event)"
-      [matSortActive]="flagSortKey$ | async"
-      [matSortDirection]="flagSortAs$ | async | lowercase"
-    >
-      <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.NAME">
-        <th class="ft-12-700" mat-header-cell *matHeaderCellDef mat-sort-header>
-          <span [matTooltip]="FLAG_TRANSLATION_KEYS.NAME | translate" matTooltipPosition="above">
-            {{ FLAG_TRANSLATION_KEYS.NAME | translate | uppercase }}
-          </span>
-        </th>
-        <td class="ft-12-600" mat-cell *matCellDef="let flag">
-          <a
-            [routerLink]="['/featureflags', 'detail', flag.id]"
-            *ngIf="flag.name?.length < 30; else flagNameEllipsis"
-            class="flag-name"
-          >
-            {{ flag.name }}
-          </a>
-          <ng-template #flagNameEllipsis>
-            <span
-              [matTooltip]="flag.name"
-              class="flag-name"
-              matTooltipPosition="above"
-            >
-              {{ flag.name | truncate: 30 }}
+<div scroll (scrolled)="fetchFlagsOnScroll()" class="flag-list-table-container" #tableContainer>
+  <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoading$ | async"></mat-progress-bar>
+  <table
+    class="flag-list-table"
+    mat-table
+    [dataSource]="dataSource$"
+    [ngClass]="{'no-data': !dataSource$?.data?.length}"
+    matSort
+    (matSortChange)="changeSorting($event)"
+    [matSortActive]="flagSortKey$ | async"
+    [matSortDirection]="flagSortAs$ | async | lowercase"
+  >
+    <!-- Name Column -->
+    <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.NAME">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="name-column ft-14-600">
+        {{ FLAG_TRANSLATION_KEYS.NAME | translate }}
+      </th>
+      <td mat-cell *matCellDef="let flag" class="name-column ft-14-400">
+        <a
+          [routerLink]="['/featureflags', 'detail', flag.id]"
+          [matTooltip]="flag.name.length >= 30 ? flag.name : null"
+          matTooltipPosition="above"
+          class="flag-name"
+        >
+          {{ flag.name | truncate: 30 }}
+        </a>
+      </td>
+    </ng-container>
+
+    <!-- Status Column -->
+    <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.STATUS">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="status-column ft-14-600">
+        {{ FLAG_TRANSLATION_KEYS.STATUS | translate }}
+      </th>
+      <td mat-cell *matCellDef="let flag" class="status-column ft-14-400">
+        <app-common-status-indicator-chip [chipClass]="flag.status"></app-common-status-indicator-chip>
+      </td>
+    </ng-container>
+
+    <!-- Updated at Column -->
+    <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.UPDATED_AT">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="updated-at-column ft-14-600">
+        {{ FLAG_TRANSLATION_KEYS.UPDATED_AT | translate }}
+      </th>
+      <td mat-cell *matCellDef="let flag" class="updated-at-column ft-14-400">
+        {{ flag.updatedAt | date: 'MMM d, y h:mm a' }}
+      </td>
+    </ng-container>
+
+    <!-- App Context Column -->
+    <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.APP_CONTEXT">
+      <th mat-header-cell *matHeaderCellDef class="app-context-column ft-14-600">
+        {{ FLAG_TRANSLATION_KEYS.APP_CONTEXT | translate }}
+      </th>
+      <td mat-cell *matCellDef="let flag" class="ft-14-400">
+        {{ flag.context[0] }}
+      </td>
+    </ng-container>
+
+    <!-- Tags Column -->
+    <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.TAGS">
+      <th mat-header-cell *matHeaderCellDef class="tags-column ft-14-600">
+        {{ FLAG_TRANSLATION_KEYS.TAGS | translate }}
+      </th>
+      <td mat-cell *matCellDef="let flag" class="tags-column ft-14-400 dense-2">
+        <mat-chip-listbox>
+          <mat-chip *ngFor="let tag of flag.tags" class="tag">
+            <span class="chip-label">
+              {{ tag }}
             </span>
-          </ng-template>
-          <br />
-          <span class="flag-description ft-10-400" *ngIf="flag.description?.length < 30; else flagDescription">
-            {{ flag.description }}
-          </span>
-          <ng-template #flagDescription>
-            <span class="flag-description ft-10-400" [matTooltip]="flag.description" matTooltipPosition="above">
-              {{ flag.description | truncate: 35 }}
-            </span>
-          </ng-template>
-        </td>
-      </ng-container>
+          </mat-chip>
+        </mat-chip-listbox>
+      </td>
+    </ng-container>
 
-      <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.STATUS">
-        <th class="ft-12-700" mat-header-cell *matHeaderCellDef mat-sort-header>
-          <span [matTooltip]="FLAG_TRANSLATION_KEYS.STATUS | translate" matTooltipPosition="above">
-            {{ FLAG_TRANSLATION_KEYS.STATUS | translate | uppercase }}
-          </span>
-        </th>
-        <td class="ft-12-600" mat-cell *matCellDef="let flag">
-          <app-common-status-indicator-chip [chipClass]="flag.status"></app-common-status-indicator-chip>
-        </td>
-      </ng-container>
+    <!-- Exposures Column -->
+    <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.EXPOSURES">
+      <th mat-header-cell *matHeaderCellDef class="exposures-column ft-14-600">
+        {{ FLAG_TRANSLATION_KEYS.EXPOSURES | translate }}
+      </th>
+      <td mat-cell *matCellDef="let flag" class="exposures-column ft-14-400">
+        <span *ngFor="let exposure of flag.exposures" class="exposure">{{ exposure }}</span>
+      </td>
+    </ng-container>
 
-      <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.UPDATED_AT">
-        <th class="ft-12-700" mat-header-cell *matHeaderCellDef mat-sort-header>
-          <span [matTooltip]="FLAG_TRANSLATION_KEYS.UPDATED_AT | translate" matTooltipPosition="above">
-            {{ FLAG_TRANSLATION_KEYS.UPDATED_AT | translate | uppercase }}
-          </span>
-        </th>
-        <td class="ft-12-600" mat-cell *matCellDef="let flag">
-          {{ flag.updatedAt | date: 'MMM d, y h:mm a' }}
-        </td>
-      </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-      <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.APP_CONTEXT">
-        <th class="ft-12-700" mat-header-cell *matHeaderCellDef>
-          <span [matTooltip]="FLAG_TRANSLATION_KEYS.APP_CONTEXT | translate" matTooltipPosition="above">
-            {{ FLAG_TRANSLATION_KEYS.APP_CONTEXT | translate | uppercase }}
-          </span>
-        </th>
-        <td class="ft-12-600" mat-cell *matCellDef="let flag">
-          {{ flag.context[0] }}
-        </td>
-      </ng-container>
-
-      <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.TAGS">
-        <th class="ft-12-700" mat-header-cell *matHeaderCellDef>
-          <span [matTooltip]="FLAG_TRANSLATION_KEYS.TAGS | translate" matTooltipPosition="above">
-            {{ FLAG_TRANSLATION_KEYS.TAGS | translate | uppercase }}
-          </span>
-        </th>
-        <td class="ft-12-600" mat-cell *matCellDef="let flag">
-          <mat-chip *ngFor="let tag of flag.tags" class="tag">{{ tag }}</mat-chip>
-        </td>
-      </ng-container>
-
-      <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.EXPOSURES">
-        <th class="ft-12-700" mat-header-cell *matHeaderCellDef>
-          <span [matTooltip]="FLAG_TRANSLATION_KEYS.EXPOSURES | translate" matTooltipPosition="above">
-            {{ FLAG_TRANSLATION_KEYS.EXPOSURES | translate | uppercase }}
-          </span>
-        </th>
-        <td class="ft-12-600" mat-cell *matCellDef="let flag">
-          <span *ngFor="let exposure of flag.exposures" class="exposure">{{ exposure }}</span>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      <tr *matNoDataRow>
-        <td class="no-data-row" [attr.colspan]="displayedColumns.length">
-          {{ 'feature-flags.no-flags-in-table.text' | translate }}
-        </td>
-      </tr>
-    </table>
-  </div>
+    <!-- No Data Row -->
+    <tr *matNoDataRow>
+      <td class="ft-14-400" [attr.colspan]="displayedColumns.length">
+        {{ 'feature-flags.no-flags-in-table.text' | translate }}
+      </td>
+    </tr>
+  </table>
 </div>
