--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-page/common-page.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-page/common-page.component.html
@@ -1,8 +1,8 @@
 <div class="common-page">
-  <header class="header">
+  <header>
     <ng-content select="[header]"></ng-content>
   </header>
-  <section class="content">
+  <section>
     <ng-content select="[content]"></ng-content>
   </section>
 </div>
