--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-overview-details/common-section-card-overview-details.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-overview-details/common-section-card-overview-details.component.scss
@@ -1,23 +1,14 @@
 .content-section {
-  width: 100%;
-  background-color: var(--white);
+  padding: 16px 32px 20px;
 
   .item-key-value {
+    height: 32px;
     display: flex;
     align-items: center;
-    line-height: 2;
-  }
+    column-gap: 8px;
 
-  .item-key {
-    margin-right: 8px;
-  }
-
-  .item-value {
-    color: var(--dark-grey);
-  }
-
-  .chip {
-    margin-right: 5px;
-    height: 24px;
+    .item-value {
+      color: var(--dark-grey);
+    }
   }
 }
