--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -253,10 +253,6 @@ button[mat-icon-button] {
   width: 805px;
 }
 
-.full-width {
-  width: 100%;
-}
-
 .form-standard {
   display: flex;
   flex-direction: column;
@@ -287,8 +283,22 @@ button[mat-icon-button] {
 }
 
 .mat-mdc-chip {
+  .mdc-evolution-chip__cell .mat-mdc-chip-action {
+    padding: 2px 8px;
+  }
+
   .chip-label {
+    font-family: 'Roboto';
+    font-size: 12px;
+    font-weight: 400;
     color: var(--black-2);
+  }
+
+  &.status-indicator {
+    .chip-label {
+      font-weight: 500;
+      color: inherit;
+    }
   }
 }
 
@@ -422,6 +432,20 @@ button[mat-icon-button] {
 
       .mdc-tab-indicator .mdc-tab-indicator__content {
         margin-bottom: -20px;
+      }
+    }
+  }
+
+  &.new-tab-group {
+    .mat-mdc-tab-header {
+      border-bottom: none;
+
+      .mat-mdc-tab-label-container .mat-mdc-tab-labels .mat-mdc-tab {
+        margin: 8px 0;
+
+        .mdc-tab-indicator .mdc-tab-indicator__content {
+          margin-bottom: -8px;
+        }
       }
     }
   }
