Set max-height for common-tag-input and align details page tags to the top

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-overview-details/common-section-card-overview-details.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-overview-details/common-section-card-overview-details.component.scss
@@ -1,14 +1,18 @@
 .content-section {
-  padding: 16px 32px 20px;
+  padding: 22px 32px 20px;
 
   .item-key-value {
-    height: 32px;
+    min-height: 32px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     column-gap: 8px;
 
     .item-value {
       color: var(--dark-grey);
+    }
+
+    .chips-container {
+      margin-top: -4px;
     }
   }
 }
