--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -10,7 +10,7 @@
         [removable]="isChipRemovable"
         (removed)="removeChip(componentTag)"
       >
-        <span class="ft-12-400 chip-label">
+        <span class="chip-label">
           {{ componentTag }}
         </span>
         <mat-icon matChipRemove *ngIf="isChipRemovable">cancel</mat-icon>
