--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-overview-details/common-section-card-overview-details.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-overview-details/common-section-card-overview-details.component.html
@@ -2,19 +2,14 @@
   <div *ngFor="let item of data | keyvalue: noSort">
     <div class="item-key-value">
       <span class="ft-14-600">{{ item.key }}:</span>
-      <ng-container *ngIf="item.key !== 'Tags'; else chipSection">
-        <span class="ft-14-400 item-value">{{ item.value }}</span>
-      </ng-container>
-
-      <ng-template #chipSection>
-        <mat-chip-listbox>
-          <mat-chip *ngFor="let tag of item.value">
-            <span class="chip-label">
-              {{ tag }}
-            </span>
-          </mat-chip>
-        </mat-chip-listbox>
-      </ng-template>
+      <span *ngIf="item.key !== 'Tags'" class="ft-14-400 item-value">{{ item.value }}</span>
+      <mat-chip-listbox *ngIf="item.key === 'Tags'" class="chips-container">
+        <mat-chip *ngFor="let tag of item.value">
+          <span class="chip-label">
+            {{ tag }}
+          </span>
+        </mat-chip>
+      </mat-chip-listbox>
     </div>
   </div>
 </div>
