Stretch the Name column width on the Exclude Lists table for alignment

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -4,7 +4,7 @@
     class="participant-list-table"
     mat-table
     [dataSource]="dataSource"
-    [ngClass]="{'no-data': !dataSource?.length}"
+    [ngClass]="{'no-data': !dataSource?.length, 'no-enable-column': displayedColumns.length < 5}"
     matSort
     (matSortChange)="changeSorting($event)"
   >
