--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-table/feature-flag-inclusions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-table/feature-flag-inclusions-table.component.html
@@ -1,6 +1,6 @@
 <div class="table-container">
   <app-common-details-participant-list-table
-    [listType]="listType$"
+    [tableType]="tableType"
     [dataSource]="dataSource$ | async"
     [isLoading]="isLoading$ | async"
     noDataRowText="feature-flags.details.inclusions.card.no-data-row.text"
