Update Feature Flags Page Styles (#1779)
* consolidate add-edit-duplicate modals

* adjustments to backend updates, code cleanup

* fixed messed up interfaces after merge

* fix up better selectors and some refactor for readability

* remove debugging thing

* Update Feature Flags Modal Style (#1769)

* param to flag naming

* remove unused en.jsonkey, refactored selector logic, better names

* Update createRequest to sendRequest

* Update Page Styles to Match Figma Design

* Set max-height for common-tag-input and align details page tags to the top

* Stretch the Name column width on the Exclude Lists table for alignment

* Rename listType$ to tableType

---------

Co-authored-by: danoswaltCL <doswalt@carnegielearning.com>
Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-table/feature-flag-inclusions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-table/feature-flag-inclusions-table.component.html
@@ -1,5 +1,6 @@
-<div class="flags-list-container">
+<div class="table-container">
   <app-common-details-participant-list-table
+    [tableType]="tableType"
     [dataSource]="dataSource$ | async"
     [isLoading]="isLoading$ | async"
     noDataRowText="feature-flags.details.inclusions.card.no-data-row.text"
