--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -1,56 +1,81 @@
-<div class="participant-segment-container">
-  <div scroll (scrolled)="fetchFlagsOnScroll()" class="participant-segment-table-container" #tableContainer>
-    <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
-    <table
-      class="participant-segment-list"
-      mat-table
-      [dataSource]="dataSource"
-      matSort
-      (matSortChange)="changeSorting($event)"
-    >
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <!-- TODO this is placeholder logic, need to simplify -->
-        <td mat-cell *matCellDef="let segment">{{ segment.name }}</td>
-      </ng-container>
+<div scroll (scrolled)="fetchFlagsOnScroll()" class="participant-list-table-container" #tableContainer>
+  <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
+  <table
+    class="participant-list-table"
+    mat-table
+    [dataSource]="dataSource"
+    [ngClass]="{'no-data': !dataSource?.length, 'no-enable-column': displayedColumns.length < 5}"
+    matSort
+    (matSortChange)="changeSorting($event)"
+  >
+    <!-- Type Column -->
+    <ng-container [matColumnDef]="PARTICIPANT_LIST_COLUMN_NAMES.TYPE">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="type-column ft-14-600">
+        {{ PARTICIPANT_LIST_TRANSLATION_KEYS.TYPE | translate }}
+      </th>
+      <td mat-cell *matCellDef="let segment" class="type-column ft-14-400">
+        {{ segment.type }}
+      </td>
+    </ng-container>
 
-      <!-- Type Column -->
-      <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
-        <td mat-cell *matCellDef="let segment">
-          {{ segment.type }}
-        </td>
-      </ng-container>
+    <!-- Values Column -->
+    <ng-container [matColumnDef]="PARTICIPANT_LIST_COLUMN_NAMES.VALUES">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="values-column ft-14-600">
+        {{ PARTICIPANT_LIST_TRANSLATION_KEYS.VALUES | translate }}
+      </th>
+      <td mat-cell *matCellDef="let segment" class="values-column ft-14-400">
+        {{ segment.values.length + ' Values' }}
+      </td>
+    </ng-container>
 
-      <!-- Status Column -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let segment">
-          <mat-slide-toggle></mat-slide-toggle>
-        </td>
-      </ng-container>
+    <!-- Name Column -->
+    <ng-container [matColumnDef]="PARTICIPANT_LIST_COLUMN_NAMES.NAME">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="name-column ft-14-600">
+        {{ PARTICIPANT_LIST_TRANSLATION_KEYS.NAME | translate }}
+      </th>
+      <!-- TODO this is placeholder logic, need to simplify -->
+      <td mat-cell *matCellDef="let segment" class="name-column ft-14-400">
+        {{ segment.name }}
+      </td>
+    </ng-container>
 
-      <!-- Actions Column -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Actions</th>
-        <td mat-cell *matCellDef="let segment">
-          <button class="table-row-action-button" mat-icon-button>
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button class="table-row-action-button" mat-icon-button>
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+    <!-- Enable Column -->
+    <ng-container [matColumnDef]="PARTICIPANT_LIST_COLUMN_NAMES.ENABLE">
+      <th mat-header-cell *matHeaderCellDef class="enable-column ft-14-600">
+        {{ PARTICIPANT_LIST_TRANSLATION_KEYS.ENABLE | translate }}
+      </th>
+      <td mat-cell *matCellDef="let segment" class="enable-column ft-14-400">
+        <mat-slide-toggle
+          color="primary"
+          [checked]="segment.enabled"
+        >
+        </mat-slide-toggle>
+      </td>
+    </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      <tr *matNoDataRow>
-        <td class="no-data-row" [attr.colspan]="displayedColumns.length">
-          {{ noDataRowText | translate }}
-        </td>
-      </tr>
-    </table>
-  </div>
+    <!-- Actions Column -->
+    <ng-container [matColumnDef]="PARTICIPANT_LIST_COLUMN_NAMES.ACTIONS">
+      <th mat-header-cell *matHeaderCellDef class="actions-column ft-14-600">
+        {{ PARTICIPANT_LIST_TRANSLATION_KEYS.ACTIONS | translate }}
+      </th>
+      <td mat-cell *matCellDef="let segment" class="actions-column ft-14-400 dense-2">
+        <button mat-icon-button class="action-button">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button class="action-button">
+          <mat-icon>delete_outline</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+    <!-- No Data Row -->
+    <tr *matNoDataRow>
+      <td class="ft-14-400" [attr.colspan]="displayedColumns.length">
+        {{ noDataRowText | translate }}
+      </td>
+    </tr>
+  </table>
 </div>
