--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.scss
@@ -1,69 +1,92 @@
-:host ::ng-deep .flags-list-container {
-  height: 100%;
+.flag-list-table-container {
+  position: relative;
+  overflow: auto;
   width: 100%;
 
-  .flags-list-table-container {
-    position: relative;
-    margin-top: 8px;
-    overflow: auto;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    .spinner {
-      position: sticky;
-      top: 0;
-      z-index: 1111;
-    }
+  .spinner {
+    position: sticky;
+    top: 0;
+    z-index: 1111;
   }
 
-  .flags-list {
-    width: 100%;
+  /* Add gap between header and body when no data exists */
+  ::ng-deep .no-data tbody:before {
+    display: block;
+    line-height: 8px;
+    content: '\200C';
+  }
 
-    th {
-      color: var(--grey-2);
-    }
-
-    tr.mat-mdc-footer-row,
-    tr.mat-mdc-row {
-      height: 55px;
-    }
-
-    .mat-mdc-cell,
-    .mat-mdc-header-cell {
-      padding: 10px 5px;
-      padding-left: 20px;
-      width: 10%;
-      word-break: break-word;
-    }
-
-    .mat-mdc-header-cell {
+  .flag-list-table {
+    ::ng-deep thead {
       background-color: var(--zircon);
-      margin-bottom: 10px;
+
+      tr.mat-mdc-header-row {
+        height: 48px;
+        border: 0;
+
+        th {
+          padding-left: 0;
+          color: var(--darker-grey);
+
+          &:first-child {
+            border-top-left-radius: 4px;
+          }
+
+          &:last-child {
+            border-top-right-radius: 4px;
+          }
+        }
+      }
     }
 
-    .flag {
-      &-name {
-        text-decoration: underline;
-        cursor: pointer;
+    ::ng-deep tbody {
+      tr.mat-mdc-row {
+        height: 56px;
+
+        td {
+          min-width: 96px;
+          padding-left: 0;
+          color: var(--black-2);
+        }
       }
 
-      &-description {
-        color: var(--grey-3);
+      tr.mat-mdc-no-data-row {
+        td {
+          height: 48px;
+          text-align: center;
+          border: 1.5px dashed var(--light-grey-2);
+          color: var(--dark-grey);
+        }
       }
     }
 
-    .mat-mdc-form-field {
-      width: 40%;
-    }
-  }
+    .name-column {
+      width: 25%;
+      padding-left: 32px;
 
-  .no-data-row {
-    text-align: center;
-    font-size: 16px;
-    color: var(--dark-grey);
-    padding: 16px;
+      .flag-name {
+        color: var(--black-2);
+      }
+    }
+
+    .status-column {
+      width: 16.25%;
+    }
+
+    .updated-at-column {
+      width: 16.25%;
+    }
+
+    .app-context-column {
+      width: 16.25%;
+    }
+
+    .tags-column {
+      width: 16.25%;
+    }
+
+    .exposures-column {
+      width: 10%;
+    }
   }
 }
