--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -2,7 +2,7 @@
   <mat-label class="ft-14-400">
     {{ 'home.new-experiment.overview.tags.placeHolder' | translate }}
   </mat-label>
-  <div class="chips-container">
+  <div class="chips-container dense-2">
     <mat-chip-grid #tagsList aria-label="Tags" formControlName="tags">
       <mat-chip-row
         *ngFor="let componentTag of tags.value"
@@ -10,7 +10,7 @@
         [removable]="isChipRemovable"
         (removed)="removeChip(componentTag)"
       >
-        <span class="ft-12-400 chip-label">
+        <span class="chip-label">
           {{ componentTag }}
         </span>
         <mat-icon matChipRemove *ngIf="isChipRemovable">cancel</mat-icon>
