--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
@@ -1,11 +1,14 @@
 .input-container {
+  width: 100%;
   padding-bottom: 16px;
 
   .chips-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+    max-height: 64px;
+    overflow: scroll;
 
     .icon-button {
       background: none;
